--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DiplomProject",
+  "name": "FlatsRepairSite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,5 +18,13 @@
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.6.0",
+    "element-closest": "^3.0.1",
+    "es6-promise": "^4.2.8",
+    "formdata-polyfill": "^3.0.19",
+    "nodelist-foreach-polyfill": "^1.2.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
